// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DEFAULT_CHART_THEME > matches snapshot 1`] = `
{
  "axisColor": "#999999",
  "axisLabelColor": "#666666",
  "axisTitleColor": "#444444",
  "axisTitleFontSize": 11,
  "background": "#ffffff",
  "barBorderRadius": 2,
  "barGap": 2,
  "fontFamily": "'Segoe UI', system-ui, -apple-system, sans-serif",
  "gridLineColor": "#e8e8e8",
  "gridLineWidth": 1,
  "labelFontSize": 10,
  "legendFontSize": 10,
  "legendTextColor": "#555555",
  "plotBackground": "#fafafa",
  "titleColor": "#333333",
  "titleFontSize": 14,
}
`;

exports[`PALETTES > "default" palette matches snapshot 1`] = `
[
  "#4E79A7",
  "#F28E2B",
  "#E15759",
  "#76B7B2",
  "#59A14F",
  "#EDC948",
  "#B07AA1",
  "#FF9DA7",
]
`;

exports[`PALETTES > "ocean" palette matches snapshot 1`] = `
[
  "#003F5C",
  "#2F4B7C",
  "#665191",
  "#A05195",
  "#D45087",
  "#F95D6A",
  "#FF7C43",
  "#FFA600",
]
`;

exports[`PALETTES > "pastel" palette matches snapshot 1`] = `
[
  "#A1C9F4",
  "#FFB482",
  "#8DE5A1",
  "#FF9F9B",
  "#D0BBFF",
  "#DEBB9B",
  "#FAB0E4",
  "#CFCFCF",
]
`;

exports[`PALETTES > "vivid" palette matches snapshot 1`] = `
[
  "#E64B35",
  "#4DBBD5",
  "#00A087",
  "#3C5488",
  "#F39B7F",
  "#8491B4",
  "#91D1C2",
  "#DC0000",
]
`;

exports[`getSeriesColor > cycles through default palette 1`] = `
[
  "#4E79A7",
  "#F28E2B",
  "#E15759",
  "#76B7B2",
  "#59A14F",
  "#EDC948",
  "#B07AA1",
  "#FF9DA7",
  "#4E79A7",
  "#F28E2B",
]
`;

exports[`mergeTheme > with partial overrides merges correctly 1`] = `
{
  "axisColor": "#999999",
  "axisLabelColor": "#666666",
  "axisTitleColor": "#444444",
  "axisTitleFontSize": 11,
  "background": "#ffffff",
  "barBorderRadius": 8,
  "barGap": 4,
  "fontFamily": "monospace",
  "gridLineColor": "#e8e8e8",
  "gridLineWidth": 1,
  "labelFontSize": 10,
  "legendFontSize": 10,
  "legendTextColor": "#555555",
  "plotBackground": "#fafafa",
  "titleColor": "#333333",
  "titleFontSize": 14,
}
`;

exports[`mergeTheme > with undefined overrides returns base unchanged 1`] = `
{
  "axisColor": "#999999",
  "axisLabelColor": "#666666",
  "axisTitleColor": "#444444",
  "axisTitleFontSize": 11,
  "background": "#ffffff",
  "barBorderRadius": 2,
  "barGap": 2,
  "fontFamily": "'Segoe UI', system-ui, -apple-system, sans-serif",
  "gridLineColor": "#e8e8e8",
  "gridLineWidth": 1,
  "labelFontSize": 10,
  "legendFontSize": 10,
  "legendTextColor": "#555555",
  "plotBackground": "#fafafa",
  "titleColor": "#333333",
  "titleFontSize": 14,
}
`;

exports[`resolveChartTheme > with background override 1`] = `
{
  "axisColor": "#999999",
  "axisLabelColor": "#666666",
  "axisTitleColor": "#444444",
  "axisTitleFontSize": 11,
  "background": "#000000",
  "barBorderRadius": 2,
  "barGap": 2,
  "fontFamily": "'Segoe UI', system-ui, -apple-system, sans-serif",
  "gridLineColor": "#e8e8e8",
  "gridLineWidth": 1,
  "labelFontSize": 10,
  "legendFontSize": 10,
  "legendTextColor": "#555555",
  "plotBackground": "#fafafa",
  "titleColor": "#333333",
  "titleFontSize": 14,
}
`;

exports[`resolveChartTheme > with empty theme override returns default theme 1`] = `
{
  "axisColor": "#999999",
  "axisLabelColor": "#666666",
  "axisTitleColor": "#444444",
  "axisTitleFontSize": 11,
  "background": "#ffffff",
  "barBorderRadius": 2,
  "barGap": 2,
  "fontFamily": "'Segoe UI', system-ui, -apple-system, sans-serif",
  "gridLineColor": "#e8e8e8",
  "gridLineWidth": 1,
  "labelFontSize": 10,
  "legendFontSize": 10,
  "legendTextColor": "#555555",
  "plotBackground": "#fafafa",
  "titleColor": "#333333",
  "titleFontSize": 14,
}
`;

exports[`resolveChartTheme > with multiple overrides 1`] = `
{
  "axisColor": "#999999",
  "axisLabelColor": "#666666",
  "axisTitleColor": "#444444",
  "axisTitleFontSize": 11,
  "background": "#1a1a2e",
  "barBorderRadius": 2,
  "barGap": 2,
  "fontFamily": "'Segoe UI', system-ui, -apple-system, sans-serif",
  "gridLineColor": "#333333",
  "gridLineWidth": 1,
  "labelFontSize": 12,
  "legendFontSize": 10,
  "legendTextColor": "#555555",
  "plotBackground": "#16213e",
  "titleColor": "#e94560",
  "titleFontSize": 18,
}
`;

exports[`resolveChartTheme > with no config returns default theme 1`] = `
{
  "axisColor": "#999999",
  "axisLabelColor": "#666666",
  "axisTitleColor": "#444444",
  "axisTitleFontSize": 11,
  "background": "#ffffff",
  "barBorderRadius": 2,
  "barGap": 2,
  "fontFamily": "'Segoe UI', system-ui, -apple-system, sans-serif",
  "gridLineColor": "#e8e8e8",
  "gridLineWidth": 1,
  "labelFontSize": 10,
  "legendFontSize": 10,
  "legendTextColor": "#555555",
  "plotBackground": "#fafafa",
  "titleColor": "#333333",
  "titleFontSize": 14,
}
`;
